--- a/index.html
+++ b/index.html
@@ -5,10 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Movie Search Website</title>
-    <!-- font awesome icons cdn -->
+    <!-- font awesome icons cdn-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- custom css -->
     <link rel = "stylesheet" href = "pro2style.css">
+    <!--Font from google fonts-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Jacques+Francois+Shadow&display=swap" rel="stylesheet">
 </head>
 <body>
     
@@ -16,15 +20,15 @@
         <!-- logo -->
         <div class = "logo">
             <div class = "container">
-                <p>Cine<span>Hub.</span></p>
+                <p>Movie<span>Central</span></p>
             </div>
         </div>
         <!-- end of logo -->
         <!-- search container -->
         <div class = "search-container">
             <div class = "search-element">
-                <h3>Search Movie:</h3>
-                <input type = "text" class = "form-control" placeholder="Search Movie Title ..." id = "movie-search-box" onkeyup="findMovies()" onclick = "findMovies()">
+                <h3>Look Up Your Favorite Movie</h3>
+                <input type = "text" class = "form-control" placeholder="...Movie Title ..." id = "movie-search-box" onkeyup="findMovies()" onclick = "findMovies()">
 
                 <div class = "search-list" id = "search-list">
                     <!-- list here -->
